<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".methods.MethodIVActivity">

    <!--Título-->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="Escala de Katz"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_alignParentTop="true"/>

    <View
        android:id="@+id/divider_title"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_below="@+id/title"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/divider_title"
        android:layout_above="@+id/totalidade"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            android:orientation="vertical">

            <!--Cabeçalho-->
            <TextView
                android:id="@+id/dep"
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:layout_toStartOf="@+id/divider_dep_indep"
                android:gravity="center"
                android:layout_margin="10sp"
                android:text="@string/dependencia_text"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <View
                android:id="@+id/divider_dep_indep"
                android:layout_centerHorizontal="true"
                android:layout_width="1dp"
                android:layout_height="800dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/indep"
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:layout_toEndOf="@+id/divider_dep_indep"
                android:gravity="center"
                android:layout_margin="10dp"
                android:text="@string/idependencia_ext"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <!--Textinhos-->
            <RadioGroup android:id="@+id/radio0"
                android:layout_margin="10sp"
                android:layout_width="520dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/dep"
                android:layout_centerHorizontal="true">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:onClick="onRadioButtonClicked"
                    android:layout_width = "260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_weight="1"
                    android:text="@string/test_4_0_0" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:onClick="onRadioButtonClicked"
                    android:layout_width = "260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_weight="1"
                    android:text="@string/test_4_0_1" />
            </RadioGroup>

            <RadioGroup android:id="@+id/radio1"
                android:layout_margin="10sp"
                android:layout_width="520dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/radio0"
                android:layout_centerHorizontal="true">

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:onClick="onRadioButtonClicked"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_weight="1"
                    android:text="@string/test_4_1_0" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:onClick="onRadioButtonClicked"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_weight="1"
                    android:text="@string/test_4_1_1" />
            </RadioGroup>

            <RadioGroup android:id="@+id/radio2"
                android:layout_margin="10sp"
                android:layout_width="520dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/radio1"
                android:layout_centerHorizontal="true">

                <RadioButton
                    android:id="@+id/radioButton5"
                    android:onClick="onRadioButtonClicked"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_weight="1"
                    android:text="@string/teste_4_2_0" />

                <RadioButton
                    android:id="@+id/radioButton6"
                    android:onClick="onRadioButtonClicked"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_weight="1"
                    android:text="@string/test_4_2_1" />
            </RadioGroup>

            <RadioGroup android:id="@+id/radio3"
                android:layout_margin="10sp"
                android:layout_width="520dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/radio2"
                android:layout_centerHorizontal="true">

                <RadioButton
                    android:id="@+id/radioButton7"
                    android:onClick="onRadioButtonClicked"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_weight="1"
                    android:text="@string/test_4_3_0" />

                <RadioButton
                    android:id="@+id/radioButton8"
                    android:onClick="onRadioButtonClicked"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_weight="1"
                    android:text="@string/test_4_3_1" />
            </RadioGroup>

            <RadioGroup android:id="@+id/radio4"
                android:layout_margin="10sp"
                android:layout_width="520dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/radio3"
                android:layout_centerHorizontal="true">

                <RadioButton
                    android:id="@+id/radioButton9"
                    android:onClick="onRadioButtonClicked"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_weight="1"
                    android:text="@string/test_4_4_0" />

                <RadioButton
                    android:id="@+id/radioButton10"
                    android:onClick="onRadioButtonClicked"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_weight="1"
                    android:text="@string/test_4_4_1" />
            </RadioGroup>

            <RadioGroup android:id="@+id/radio5"
                android:layout_margin="10sp"
                android:layout_width="520dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/radio4"
                android:layout_centerHorizontal="true">

                <RadioButton
                    android:id="@+id/radioButton11"
                    android:onClick="onRadioButtonClicked"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_weight="1"
                    android:text="@string/test_4_5_0" />

                <RadioButton
                    android:id="@+id/radioButton12"
                    android:onClick="onRadioButtonClicked"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_weight="1"
                    android:text="@string/test_4_5_1" />
            </RadioGroup>

        </RelativeLayout>
    </ScrollView>

    <!--Total-->
    <RelativeLayout
        android:id="@+id/totalidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <View
            android:id="@+id/divider_total"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentTop="true"
            android:background="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_marginStart="20sp"
            android:padding="15dp"
            android:text="Total" />

        <TextView
            android:id="@+id/resultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textSize="30sp"
            android:layout_marginEnd="20sp"
            android:textColor="@color/black"
            android:padding="15dp"
            android:text="0" />

    </RelativeLayout>
</RelativeLayout>